# hermes-agent

./: .gitignore  .hermes.md  AGENTS.md  AUDIT_FINDINGS.md  HANDOFF.md  IMPROVEMENT_REPORT.md  PLAN.md  README.md  REALITY_AUDIT.md  Tiltfile  Tiltfile.disabled.bak  cli.py  config.yaml  docker-compose.yml  model_tools.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rl_cli.py  run_agent.py  tilt.md  tilt_alpha.md  tilt_alpha_api-resources.md  tilt_alpha_get.md  tilt_alpha_shell.md  tilt_alpha_tiltfile-result.md  tilt_alpha_updog.md  tilt_analytics.md  tilt_analytics_opt.md  tilt_api-resources.md  tilt_apply.md  tilt_args.md  tilt_ci.md  tilt_completion.md  tilt_completion_bash.md  tilt_completion_fish.md  tilt_completion_powershell.md  tilt_completion_zsh.md  tilt_create.md  (+39 more)
.hermes/: PARALLEL-BROWSER-VISION.md
.opencode/: config.json  opencode.db-shm  opencode.db-wal
.runtime/: .runtime  market-data.json
acp_adapter/: server.py  session.py  tools.py
agent/: auxiliary_client.py  model_metadata.py  models_dev.py  nous_rate_guard.py  prompt_builder.py
docs/: acp-fix-summary.md  legacy-snapshot.md  legacy-status.txt  legacy-tilt-resources.txt  phase-g3-design.md  phase-g4-walk-forward-design.md  swarm-audit-2026-04-22.md
environments/: agent_loop.py
gateway/: run.py
hermes_cli/: auth.py  (+12 more)
services/exec-agent/finrl-x/: SMOKE.md  pyproject.toml
services/exec-agent/finrl-x/finrl_x/: __init__.py  data.py  env.py  export.py  news_risk.py  serve.py  train.py
services/exec-agent/finrl-x/finrl_x/__tests__/: test_env.py  test_news_risk.py
(+562 files in other folders)
