[project]
name = "finrl-x"
version = "0.1.0"
description = "FinRL-X micro-timing agent — PPO+SAC ensemble with ONNX export"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
    "torch>=2.0.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "requests>=2.31.0",
    "onnxscript>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["finrl_x/__tests__"]
